--- a/app/frontend/templates/index.html
+++ b/app/frontend/templates/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Муниципальные бюджеты</title>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
   </head>
   <body>
-    <p>{{ text }}</p>
+    <div id="app"></div>
+    <script src="/static/main.js"></script>
   </body>
 </html>
