--- a/app/frontend/templates/index.html
+++ b/app/frontend/templates/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="/static/main.js"></script>
+  <script src="{{ url_for('static', path='/main.js') }}"></script>
 </body>
 </html>
